# uptime-kuma

./: .gitignore  notes.md
migrations/: 20240320000000_create_notification_tables.sql
server-rust/: Cargo.toml
server-rust/migrations/: 20240323000000_initial_schema.sql
server-rust/src/: error.rs  main.rs
server-rust/src/config/: database.rs
server-rust/src/middleware/: auth.rs
server-rust/src/models/: mod.rs  monitor.rs  user.rs
server-rust/src/routes/: auth.rs  health.rs  mod.rs  monitor.rs
server-rust/src/services/: auth.rs  mod.rs  monitor.rs
src/: main.rs
src/models/: notification.rs
src/notifications/: mod.rs
src/routes/: notification.rs
src/services/: notification.rs
src/websocket/: connection.rs  handlers.rs  mod.rs
