[package]
name = "uptime-kuma-server"
version = "0.1.0"
edition = "2021"
authors = ["Uptime Kuma Contributors"]
description = "Rust backend for Uptime Kuma"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Authentication
bcrypt = "0.15"
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for monitoring
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = "0.22"
rumqttc = "0.23"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
config = "0.13"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
